CAMEL-18995: camel-jetty - Upgrade to HttpComponents 5.x